@@ -603,6 +603,13 @@ the merged collocated file.</dd>
 variable provided as parameter ends up being sorted. The variable
 should be one dimensional and the dimension that gets reordered is
 this dimension of the referenced variable.</dd>
+<dt><code class="docutils literal notranslate"><span class="pre">squash(dimension,</span> <span class="pre">variable)</span></code></dt>
+<dd>Remove the given dimension for the variable, assuming that the
+content for all items in the given dimension is the same.
+If the content is not the same an error will be raised.</dd>
+<dt><code class="docutils literal notranslate"><span class="pre">squash(dimension,</span> <span class="pre">(variable,</span> <span class="pre">...))</span></code></dt>
+<dd>Same as above, but then providing a list of variables that need
+to be squashed.</dd>
 <dt><code class="docutils literal notranslate"><span class="pre">valid(variable)</span></code></dt>
 <dd>Filter a dimension for all variables in the product such that
 invalid values for the variable provided as parameter get excluded
